--- a/launcher/src/main/res/layout/fragment_application.xml
+++ b/launcher/src/main/res/layout/fragment_application.xml
@@ -62,6 +62,7 @@
 				android:shadowDy="1"
 				android:shadowRadius="0.5"
 				android:text="@string/test_clock"
+				android:fontFamily="@font/digital_font"
 				android:textColor="#ffffffff"
 				android:textSize="25sp"/>
 
@@ -77,6 +78,7 @@
 				android:shadowRadius="0.5"
 				android:text="@string/test_date"
 				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:fontFamily="@font/digital_font"
 				android:textColor="#ffffffff"
 				android:textSize="15sp"/>
 		</LinearLayout>
